--- a/Telcel.R9.Estructura.Presentacion/Views/Empleado/GetAll.cshtml
+++ b/Telcel.R9.Estructura.Presentacion/Views/Empleado/GetAll.cshtml
@@ -7,57 +7,46 @@
 <h2>Empleado</h2>
 
 
-        @using (Html.BeginForm("Form", "Empleado", FormMethod.Post, new { enctype = "multipart/form-data" }))
-        {
-            <div id="accordion">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="d-grid gap-3 col-6 mx-auto">
-                            <a class="btn btn-success" data-bs-toggle="collapse" href="#collapseOne">
-                              Agregar Empleado
-                            </a>
-                        </div>
-                        <div id="collapseOne" class="collapse " data-bs-parent="#accordion">
-                            <div class="input-group">
-                                <span class="input-group-text"><i class="bi bi-image"></i></span>
-                                <input type="submit" value="Agregar Empleado" class="btn btn-success" />
-                            </div>
-                        </div>
-                    </div>
+@using (Html.BeginForm("Form", "Empleado", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
+    <div class="row g-3" id="input" style="display:none;">
+        <div class="row">
+            <div class="col-md-3">
+                @Html.LabelFor(model => model.Nombre)
 
-                   
-                 
-                </div>
+                <span class="input-group-text"><i class="bi bi-person-circle"></i> </span>
+                @Html.TextBoxFor(model => model.Nombre, new { @class = "form-control", @id = "txtNombre" })
+                @Html.ValidationMessageFor(model => model.Nombre)
             </div>
-            <div class="row">
-                <div class="col-md-3">
-                    @Html.LabelFor(model => model.Nombre)
+            <div class="col-md-3">
+                @Html.LabelFor(model => model.Puesto.PuestoID)
 
-                    <span class="input-group-text"><i class="bi bi-person-circle"></i> </span>
-                    @Html.TextBoxFor(model => model.Nombre, new { @class = "form-control", @id = "txtNombre" })
-                    @Html.ValidationMessageFor(model => model.Nombre)
-                </div>
-                <div class="col-md-3">
-                    @Html.LabelFor(model => model.Puesto.PuestoID)
+                <span class="input-group-text"><i class="bi bi-person-circle"></i> </span>
+                @Html.TextBoxFor(model => model.Puesto.PuestoID, new { @class = "form-control", @id = "txtNombre" })
+                @Html.ValidationMessageFor(model => model.Puesto.PuestoID)
+            </div>
+            <div class="col-md-3">
+                @Html.LabelFor(model => model.Departamento.DepartamentoID)
 
-                    <span class="input-group-text"><i class="bi bi-person-circle"></i> </span>
-                    @Html.TextBoxFor(model => model.Puesto.PuestoID, new { @class = "form-control", @id = "txtNombre" })
-                    @Html.ValidationMessageFor(model => model.Puesto.PuestoID)
-                </div>
-                <div class="col-md-3">
-                    @Html.LabelFor(model => model.Departamento.DepartamentoID)
-
-                    <span class="input-group-text"><i class="bi bi-person-circle"></i> </span>
-                    @Html.TextBoxFor(model => model.Departamento.DepartamentoID, new { @class = "form-control", @id = "txtNombre" })
-                    @Html.ValidationMessageFor(model => model.Departamento.DepartamentoID)
-                </div>
-
-                <br />
-                
-
+                <span class="input-group-text"><i class="bi bi-person-circle"></i> </span>
+                @Html.TextBoxFor(model => model.Departamento.DepartamentoID, new { @class = "form-control", @id = "txtNombre" })
+                @Html.ValidationMessageFor(model => model.Departamento.DepartamentoID)
             </div>
 
-        }
+            <br />
+            <div class="input-group">
+                <span class="input-group-text"><i class="bi bi-image"></i></span>
+                <button class="btn btn-success" type="submit">Agregar</button>
+            </div>
+
+        </div>
+    </div>
+
+}
+<div class="col-md-3" style="float:right">
+    <a><input id="idAgregar" type="submit" value="Agregar Empleado" class="btn btn-success" onclick="" /></a>
+</div>
+
 <div class="container">
     <hr />
     <div class="row">
@@ -122,3 +111,17 @@
     </div>
 </div>
 
+@section Scripts
+{
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+
+    <script type="text/javascript">
+        $('#idAgregar').click(function () {
+            $('#input').toggle('slow', function () {
+
+            });
+        });
+    </script>
+}
